# opendr_G2L2

projects/c_api/: Makefile
projects/c_api/samples/nanodet/: CMakeLists.txt  nanodet_demo.c
projects/python/perception/object_detection_2d/nanodet/: export_torchscript.py  onnx_inference.py
src/c_api/: Makefile  nanodet_libtorch.cpp
src/c_api/nanodet_libtorch/: CMakeLists.txt  main.cpp  nanodet.h  nanodet_libtorch.cpp  target.h
src/opendr/perception/object_detection_2d/nanodet/: nanodet_learner.py
src/opendr/perception/object_detection_2d/nanodet/algorithm/nanodet/inferencer/: utilities.py
src/opendr/perception/object_detection_2d/nanodet/algorithm/nanodet/model/arch/: one_stage_detector.py
src/opendr/perception/object_detection_2d/nanodet/algorithm/nanodet/model/head/: nanodet_head.py
